endpoints.tf
# locals {
#   ssm_endpoint_services = ["ssm", "ssmmessages", "ec2messages"]
# }

# resource "aws_vpc_endpoint" "ssm" {
#   for_each            = toset(local.ssm_endpoint_services)
#   vpc_id              = data.aws_vpc.default.id
#   service_name        = "com.amazonaws.${var.region}.${each.key}"
#   vpc_endpoint_type   = "Interface"
#   subnet_ids          = [aws_subnet.private_endpoint_subnet.id]
#   security_group_ids  = [aws_security_group.ssm_endpoint_sg.id]
#   private_dns_enabled = false

#   tags = {
#     Name = "ssm-endpoint-${each.key}"
#   }
# }
