security.tf
resource "aws_security_group" "public_sg" {
  name        = "ssm-public-sg"
  description = "Allow outbound traffic for SSM agent"
  vpc_id      = data.aws_vpc.default.id

  egress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

resource "aws_security_group" "private_sg" {
  name        = "ssm-private-sg"
  description = "Private subnet instance reaching SSM via NAT Gateway (no direct IGW route)"
  vpc_id      = data.aws_vpc.default.id

  egress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

resource "aws_security_group" "private_endpoint_instance_sg" {
  name        = "ssm-private-endpoint-instance-sg"
  description = "Private subnet instance reaching SSM via VPC Endpoints"
  vpc_id      = data.aws_vpc.default.id

  egress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

resource "aws_security_group" "ssm_endpoint_sg" {
  name        = "ssm-endpoint-sg"
  description = "VPC interface endpoints for SSM, accepting HTTPS only."
  vpc_id      = data.aws_vpc.default.id

  ingress {
    from_port       = 443
    to_port         = 443
    protocol        = "tcp"
    security_groups = [aws_security_group.private_endpoint_instance_sg.id]
  }
}
